--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,7 +4,7 @@
     <string name="action_settings">Paramètres</string>
     <string name="addItem">Ajouter un aliment</string>
     <string name="search">Recherche</string>
-    <string name="title_activity_container"></string>
+    <string name="title_activity_container">Conteneur</string>
     <string name="title_activity_search_page">Page de recherche</string>
     <string name="hello_world">Salut le monde ! </string>
     <string name="containerText">Contenant</string>
@@ -13,4 +13,19 @@
     <string name="validateBtn">Valider</string>
     <string name="fastSearchTitle">Recherche rapide</string>
     <string name="fastSearchBtn">Aliments presque périmés</string>
+    <string name="action_sign_in">Connexion ou s\'enregistrer</string>
+    <string name="action_sign_in_short">Connexion</string>
+    <string name="columnExpiration">Date de péremption</string>
+    <string name="columnName">Nom</string>
+    <string name="columnQty">Quantité</string>
+    <string name="error_field_required">Ce champs est requis</string>
+    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
+    <string name="error_invalid_email">Cette adresse email est invalide</string>
+    <string name="error_invalid_password">Ce mot de passe est trop court</string>
+    <string name="plus_disconnect">Déconnecté de Google+</string>
+    <string name="plus_sign_out">Changer de compte Google+</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Mot de passe (optionel)</string>
+    <string name="title_activity_login">Connexion</string>
+    <string name="title_activity_search_result">Résultat de recherche</string>
 </resources>
