--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,11 @@
     <string name="message2_dialog_confirm_deleting">(Irreversible action)</string>
     <string name="valid_dialog_confirm_deleting">Yes</string>
     <string name="no_dialog_confirm_deleting">No</string>
+    <string name="bnt_valid_add_item">Add Item</string>
+    <string name="error_item_name">Please, give a name for item !</string>
+    <string name="error_item_quantity">Please, give a quantity not null !</string>
+    <string name="error_item_expired_date">Please, choose an expired date!</string>
+    <string name="title_dialog_add_item">New Item</string>
+    <string name="label_type_item">Type:</string>
 
 </resources>
