Correction  page searchActivity

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,8 +7,8 @@
     <string name="title_activity_container">Conteneur</string>
     <string name="title_activity_search_page">Recherche</string>
     <string name="hello_world">Salut le monde ! </string>
-    <string name="containerText">Contenant</string>
-    <string name="foodTypeTitle">Type de nourriture</string>
+    <string name="containerText">Conteneur :</string>
+    <string name="foodTypeTitle">Type de nourriture :</string>
     <string name="seekNbDaysPeremp">Nombre de jours avant péremption</string>
     <string name="validateBtn">Valider</string>
     <string name="fastSearchTitle">Recherche rapide</string>
