--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,12 @@
     <string name="action_settings">Settings</string>
     <string name="addContainer">Add Container</string>
     <string name="title_activity_container">Container</string>
-    <string name="addItem">Add food</string>
+    <string name="addItem" translatable="false">Add food</string>
     <string name="title_activity_search_page">Search</string>
     <string name="hello_world">Hello world!</string>
     <string name="search">Search</string>
-    <string name="containerText">Container</string>
-    <string name="foodTypeTitle">Type of food</string>
+    <string name="containerText">Container :</string>
+    <string name="foodTypeTitle">Type of food :</string>
     <string name="seekNbDaysPeremp">Number of days before peremption</string>
     <string name="validateBtn">Validate</string>
     <string name="fastSearchTitle">Fast search</string>
